@@ -12,6 +12,7 @@
     Here's a few other sites (besides the <a href="http://www.fvwm.org/">official</a> one) that have FVWM info:
 
     <ul>
+      <li><a href="http://members.fcwm.org/glen/fvwm/">Glen Lee Edward's Screen shots and config files page</a>
       <li><a href="http://www.pcnet.com/~proteus/Fvwm/FvwmPatches.html">Bob Woodside's Miscellaneous patches</a>
       <li><a href="http://www.oneway.com/fvwm/">Jay Kuri's Fvwm Module documentation in Palm Pilot format</a>
       <li><a href="http://fvwm-ewmh.sourceforge.net">Extended WM Hints for fvwm 2.4</a> - Enables integration with KDE2, GTK+2 and the future GNOME2
