@@ -312,6 +312,11 @@ I constantly run and need quick access to.
 All 3 bars are easily iconized and removed from the screen with a
 simple key stroke designed specifically for that individual bar,
 leaving me a clean and open desktop to run additional programs.
+<p>
+Note: Check out Glen's excellent FVWM
+<a href="http://members.fcwm.org/glen/fvwm/">page</a>
+for even more FVWM
+screenshots and information.
 	</td></tr>
 
       <tr valign="top"><td>
