@@ -1,7 +1,9 @@
 2001-12-07  Dan Espen  <dane@mk.telcordia.com>
 
+	* screenshots/index.html:
 	* links.html: Clarify that FVWM questions are best answered when asked
 	at fvwm@fvwm.org.
+	Link to Glen Lee Edwards excellent page.
 
 2001-11-27  Dominik Vogt  <dominik.vogt@gmx.de>
 
